# DocWorkflow

./: .gitignore  INSTALL.md  KNOWN_ISSUES.md  README.md  TODO.md  catmus_htr_config.yml  catmus_htr_htromance.yml  catmus_htr_minitest.yml  churro_htr_config.yml  churro_htromance.yml  compare_line_seg.sh  pixi.toml  pyproject.toml  pytest.ini  requirements.txt  requirements_vlm.txt  run.py  scrap.ipynb  setup_envs.sh  statistiques_dataset.csv  vlm_dots_htromance.yml  vlm_nanonets_htromance.yml
LA-training/catmus_seg_s_16_10/: args.yaml  results.csv
configs/: catmus_cmmhwr_minitest.yml  catmus_htr_htromance_minitest.yml  catmus_htr_minitest.yml  catmus_print_16.yml  catmus_print_17.yml  churro_cmmhwr_minitest.yml  churro_htr_config.yml  example_config.yml  layout_yolo26n_train.yml  line_yolo26_train.yml  line_yolo26n_train.yml  trocr_cmmhwr_minitest.yml  vlm_chandra_htromance.yml  vlm_churro_htromance.yml  vlm_deepseek_htromance.yml  vlm_linelvl_cmmhwr_minitest.yml  vlm_nanonets_htromance.yml  vlm_paddleocr_htromance.yml  vlm_qwen2.5_vl_3B_htromance copy.yml  vlm_qwen2.5_vl_3B_htromance.yml  vlm_qwen3_vl_2B_htromance.yml  vlm_qwen3_vl_4B_htromance.yml
configs/cmmhwr/: Churro.yml  Churro_linelvl.yml  Churro_linelvl_finetuned.yml  Churro_linelvl_scrap.yml  Churro_multiline.yml  Medusa0.1Line-9B.yml  Qwen2B_linelvl.yml  Qwen3.5_4B.yml  Qwen3.5_4B_linelvl_checkpoint.yml  Qwen3.5_4B_linelvl_retrain.yml  Qwen3.5_4B_linelvl_retrain_silver.yml  Qwen3.5_4B_silver_gold_platinum_romances.yml  Qwen3.5_9B_linelvl_retrain.yml  Qwen4B_linelvl.yml  Qwen4B_linelvl_silvertrain.yml  Qwen8B_linelvl.yml  Qwen8B_linelvl_retrain checkpoint_1000.yml  Qwen8B_linelvl_retrain checkpoint_6500.yml  Qwen8B_linelvl_retrain.yml  kraken_htr.yml  kraken_line_kraken_htr.yml  test_bad_latin.yml  tridis_minicpm_abbr.yml  tridis_minicpm_abbr_multiline.yml  tridis_minicpm_abbr_scrap.yml  trocr_medieval_base.yml  yolo_seg_chahan_line_kraken_htr.yml
configs/htromance/: vlm_chandra_htromance.yml  vlm_churro_htromance.yml  vlm_deepseek_htromance.yml  vlm_dots_htromance.yml  vlm_nanonets_htromance.yml  vlm_qwen2.5_vl_3B_htromance.yml  vlm_qwen3_vl_4B_htromance.yml
configs/pipeline/: catmus_cmmhwr_minitest.yml  catmus_htr_config.yml  catmus_htr_htromance.yml  catmus_htr_htromance_minitest.yml  catmus_htr_minitest.yml  catmus_print_17.yml  layout_comparison_yolo11s.yml  layout_yolo26_train.yml  line_comparison_kraken.yml  line_comparison_yolo.yml
configs/vlm/: churro_htr_config.yml  churro_htr_scrap_config.yml  vlm_chandra_htromance.yml  vlm_churro_htromance.yml  vlm_dots_htromance.yml  vlm_paddleocr_htromance.yml  vlm_qwen2.5_vl_3B_htromance.yml  vlm_qwen3_vl_2B_htromance.yml  vlm_qwen3_vl_4B_htromance.yml
content/: catmus-superscript.json
core/: base_model.py  cli.py  config_manager.py  utils.py  visualisation.py  yolalto.py
debug/: debug_cer_issue.py  gt_btv1b84526412_f22.xml  pred_btv1b84526412_f22.xml
htr/: model.py
htr/configs/: catmus_medieval.json
layout/: cli.py  model.py
layout/configs/: catmus_seg_s_16_10.json
line/: cli.py  model.py
line/configs/: catmus_ms_line.json  default_line_model.json
scripts/: check_versions.py  churro_hyperparameter_sweep.sh  kaggle_preprocessing.py  merge_lora_medusa.py  setup_envs.sh  special_chars_cer_analysis.py  train_predict_eval_churro.sh
src/: __main__.py
src/alto/: __init__.py  alto_lines.py  alto_lines_to_yolo.py  alto_text.py  alto_zones.py  yolalto.py
src/cli/: predict.py  print.py  score.py  train.py
src/content/: catmus-combining.json  (+3 more)
tests/: conftest.py  test_config.py  test_imports.py  test_imports_train.py
wandb/: latest-run
(+93 files in other folders)
